--- a/task4/style.css
+++ b/task4/style.css
@@ -1,11 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
-
-:root {
-    --error-color: #dc3545;
-    --success-color: #28a745;
-    --warning-color: #ffc107;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -13,45 +5,31 @@
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    background-color: #f4f4f4;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana,
+        sans-serif;
+    font-size: 18px;
+    background-color: rgb(229, 247, 241);
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    min-height: 100vh;
-    margin: 2%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    min-height: 30%;
+    margin: 3%;
 }
-
 .container {
-    background-color: #fff;
-    padding: 1em;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    background-color: rgb(255, 255, 255);
+    padding: 2%;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
     width: 400px;
 }
-
-.form {
-    padding: 10px 20px;
-}
-
-.form h1 {
-    font-size: 1.5em;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
 .form-field {
     margin-bottom: 5px;
 }
-
 .form-field label {
     display: block;
-    color: #777;
     margin-bottom: 5px;
 }
-
 .form-field input {
     border: solid 2px #f0f0f0;
     border-radius: 3px;
@@ -65,34 +43,25 @@ body {
 .form-field input:focus {
     outline: none;
 }
-
 .form-field.error input {
-    border-color: var(--error-color);
+    border-color: red;
 }
-
 .form-field.success input {
-    border-color: var(--success-color);
+    border-color: green;
 }
 
-.form-field small {
-    color: var(--error-color);
+.form-field error {
+    color: red;
 }
-
 /* button */
 .btn {
     width: 100%;
     padding: 3%;
-    background: #007bff;
-    border-bottom: 2px solid #007bff;
-    border-top-style: none;
-    border-right-style: none;
-    border-left-style: none;
-    color: #fff;
+    color: rgb(19, 18, 18);
     text-transform: uppercase;
 }
 
 .btn:hover {
-    background: #0069d9;
     cursor: pointer;
 }
 
